--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,18 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
+            <a href="{{ path('homepage') }}" class="text-white no-underline hover:text-gray-200 px-3 py-2">Home</a>
+            <a href="{{ path('admin') }}" class="text-white no-underline hover:text-gray-200 px-3 py-2">Admin</a>
+            <a href="{{ path('app_product') }}" class="text-white no-underline hover:text-gray-200 px-3 py-2">Products</a>
+            <ul>
+            {% for conference in conferences %}
+                <li><a href="{{ path('conference', { id: conference.id }) }}">{{ conference }}</a></li>
+            {% endfor %}
+            </ul>
+            <hr />
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
